[gd_scene load_steps=12 format=3 uid="uid://c8q7y5x4k3j2"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_script"]

[sub_resource type="SystemFont" id="SystemFont_game"]
font_names = PackedStringArray("Sans-Serif")
multichannel_signed_distance_field = true

[sub_resource type="Gradient" id="Gradient_bg"]
colors = PackedColorArray(0.960784, 0.964706, 0.980392, 1, 0.933333, 0.945098, 0.964706, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bg")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_score_pill"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 99
corner_radius_top_right = 99
corner_radius_bottom_right = 99
corner_radius_bottom_left = 99
shadow_color = Color(0, 0, 0, 0.05)
shadow_size = 10
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_color = Color(0.05, 0.1, 0.2, 0.05)
shadow_size = 60
shadow_offset = Vector2(0, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_display_frame"]
bg_color = Color(0.960784, 0.964706, 0.980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.901961, 0.913725, 0.941176, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_color_display"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_option"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.901961, 0.913725, 0.941176, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.03)
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_option_hover"]
bg_color = Color(0.98, 0.99, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.309804, 0.384314, 0.968627, 0.5)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.309804, 0.384314, 0.968627, 0.1)
shadow_size = 10
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_option_pressed"]
bg_color = Color(0.960784, 0.964706, 0.980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.85, 0.9, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bg")

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="TopBar" type="HBoxContainer" parent="SafeArea"]
layout_mode = 2
size_flags_vertical = 0
alignment = 2

[node name="ScorePanel" type="PanelContainer" parent="SafeArea/TopBar"]
custom_minimum_size = Vector2(100, 44)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_score_pill")

[node name="Margin" type="MarginContainer" parent="SafeArea/TopBar/ScorePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="ScoreLabel" type="Label" parent="SafeArea/TopBar/ScorePanel/Margin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.309804, 0.384314, 0.968627, 1)
theme_override_fonts/font = SubResource("SystemFont_game")
theme_override_font_sizes/font_size = 16
text = "Nilai: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardCenter" type="CenterContainer" parent="SafeArea"]
layout_mode = 2

[node name="GameCard" type="PanelContainer" parent="SafeArea/CardCenter"]
custom_minimum_size = Vector2(640, 800)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="Margin" type="MarginContainer" parent="SafeArea/CardCenter/GameCard"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 40

[node name="Content" type="VBoxContainer" parent="SafeArea/CardCenter/GameCard/Margin"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Header" type="VBoxContainer" parent="SafeArea/CardCenter/GameCard/Margin/Content"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="SafeArea/CardCenter/GameCard/Margin/Content/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0980392, 0.129412, 0.176471, 1)
theme_override_fonts/font = SubResource("SystemFont_game")
theme_override_font_sizes/font_size = 24
text = "Warna apakah ini?"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="SafeArea/CardCenter/GameCard/Margin/Content/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.45, 0.55, 1)
theme_override_fonts/font = SubResource("SystemFont_game")
theme_override_font_sizes/font_size = 14
text = "Pilih satu jawaban yang benar"
horizontal_alignment = 1

[node name="ColorDisplayContainer" type="PanelContainer" parent="SafeArea/CardCenter/GameCard/Margin/Content"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_display_frame")

[node name="Margin" type="MarginContainer" parent="SafeArea/CardCenter/GameCard/Margin/Content/ColorDisplayContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="ColorDisplay" type="Panel" parent="SafeArea/CardCenter/GameCard/Margin/Content/ColorDisplayContainer/Margin"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_color_display")

[node name="OptionsContainer" type="VBoxContainer" parent="SafeArea/CardCenter/GameCard/Margin/Content"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="FeedbackLabel" type="Label" parent="SafeArea/CardCenter/GameCard/Margin/Content"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_game")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1
